# clove_compute

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
bench/: bench_gemm.cu
include/clove/: common.cuh
include/clove/kernels/: activations.cuh  attention.cuh  gemm.cuh  layernorm.cuh
include/clove/runtime/: tensor.h
src/: main.cpp
src/kernels/: activations.cu  attention.cu  gemm_fp16.cu  gemm_int4.cu  gemm_int8.cu  layernorm.cu  rope.cu  softmax.cu
src/runtime/: inference.cu  kv_cache.cu  model_loader.cpp  tensor.cu
tests/: test_gemm.cu
